--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>BuddyStart</title>
+        <title>Buddy Search</title>
         <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     </head>
     <body>
